<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_dark_color"
    android:orientation="vertical"
    tools:context="com.example.android.musicapp.MainActivity">

    <TextView
        style="@style/Start"
        android:background="@color/primary_dark_color"
        android:text="@string/app_name" />


    <View style="@style/DarkGrayLine" />

    <TextView
        android:id="@+id/songs"
        style="@style/MainStyle"
        android:background="@color/category_background"
        android:text="@string/songs" />

    <View style="@style/DarkGrayLine" />

    <TextView
        android:id="@+id/artists"
        style="@style/MainStyle"
        android:background="@color/category_background"
        android:text="@string/artists" />

    <View style="@style/DarkGrayLine" />

    <EditText
        android:id="@+id/search_bar"
        style="@style/SearchBar"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/white"
        android:hint="@string/searchHint"
        android:nextFocusLeft="@id/focus"
        android:nextFocusUp="@id/focus" />

    <Button
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/search"
        android:layout_gravity="center_horizontal"
        />

</LinearLayout>
